# travis-ci-haskell

./: .travis.yml  Makefile  before-install.sh  cabal.project  empty-package.cabal  install.sh  script.sh  sh-lib  travis-ci-test-package.cabal
pkg-a/: pkg-a.cabal  travis-ci-test-package.cabal
pkg-b/: pkg-b.cabal  src  tests  travis-ci-test-package-b.cabal
src/: TestDatas.hs
tests/: UseQuickCheck2.hs  UseTestFramework.hs
travis-CI/: custom-cabal  dirs.list  sh-lib
travis-CI/cabal-hvr-ghc/: before-install.sh  install.sh  script.sh
travis-CI/cabal-hvr-ghc-2/: install.sh  script.sh
travis-CI/stack/: before-install.sh  install.sh  script.sh
travis-CI/stack-each/: install.sh
