name:                travis-ci-test-package
version:             0.1.0.0
synopsis:            Test package for travis CI
description:         Test package for travis CI
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                     TestDatas
  build-depends:     base <5
  hs-source-dirs:    src
  default-language:  Haskell2010


test-suite use-test-framework
  type:             exitcode-stdio-1.0
  main-is:          UseTestFramework.hs
  hs-source-dirs:   tests
  build-depends:    base <5, travis-ci-test-package,
                    test-framework,
                    test-framework-quickcheck2, QuickCheck
  default-language: Haskell2010
